--- a/colonies_tracking_collab.ipynb
+++ b/colonies_tracking_collab.ipynb
@@ -343,7 +343,8 @@
         "features_cnt=15000 \\\n",
         "N_CORES=4 \\\n",
         "parallel=OFF \\\n",
-        "reg_algo=FFT"
+        "reg_algo=FFT \\\n",
+        "file_mask=\".tif\""
       ]
     },
     {
@@ -361,24 +362,25 @@
         "!python3 /content/colonies_tracking_base/ColoniesTracker/CoreTrackingAPI.py \\\n",
         "/content/work_output \\\n",
         "/content/work_trk \\\n",
-        "ffile_mask=\"_tab.csv\" \\\n",
+        "file_mask=\"_tab.csv\" \\\n",
         "max_dist_param=35 \\\n",
-        "max_gap=4 \\\n",
+        "max_gap=6 \\\n",
         "split_merge=True \\\n",
-        "min_track_len=1 \\\n",
+        "min_track_len=10 \\\n",
         "min_tree_len=50 \\\n",
-        "merging_cost_cutoff_multiplier=1.0 \\\n",
+        "merging_cost_cutoff_multiplier=1.25 \\\n",
         "frames_cnt=-1 \\\n",
-        "sq_lower_bound=99 \\\n",
+        "sq_lower_bound=499 \\\n",
         "sq_upper_bound=999999 \\\n",
         "bkg_img=/content/work_output/W0001F0003T0001Z001C1_movl.jpg \\\n",
         "tag_sym=\"11,15\" \\\n",
         "napari_viewer=\"OFF\" \\\n",
         "custom_offset_mode=\"OFF\" \\\n",
         "matplot_lib=\"ON\" \\\n",
-        "split_merge=False \\\n",
         "shifts_path=/content/work_output.txt \\\n",
-        "save_image_path=/content/work_tracks.png\n"
+        "shift_threshold_x=35 \\\n",
+        "shift_threshold_y=35 \\\n",
+        "save_image_path=/content/work_tracks.png"
       ]
     },
     {
